--- a/ClassExercises/Week2/Week2_BeatPhase/index.html
+++ b/ClassExercises/Week2/Week2_BeatPhase/index.html
@@ -48,7 +48,7 @@
 									<div id="page-content">
 									<h2>Background</h2>
 									<p>
-										We saw at the <a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module2/Video4">end of module 2</a> that if we add two sinusoids together that are very near in frequency, then we get a so-called "beat frequency" resulting from patterns of constructive and destructive interference.  In particular, if we have the function
+										We saw at the <a href = "../../../../Modules/Module2/Video4">end of module 2</a> that if we add two sinusoids together that are very near in frequency, then we get a so-called "beat frequency" resulting from patterns of constructive and destructive interference.  In particular, if we have the function
 									</p>
 
 									<h3>
@@ -68,7 +68,7 @@
 										Notice how since we're using cosines with zero phase, the beat is at its peak at <code>t = 0</code>, and then it goes down after that.  What if we wanted a peak to happen at a particular time?  How would we change the function?  In other words, what sinusoids will we use?  Recall that a sinusoid is more general than a zero-phase cosine, and is defined as 
 
 										<h3>
-											y(t) = A \cos (2 \pi f t + \phi)
+											\[ y(t) = A \cos (2 \pi f t + \phi) \]
 										</h3>
 										
 										
