Adding beat shift concept video

--- a/Assignments/HW1_RissetBeats/index.html
+++ b/Assignments/HW1_RissetBeats/index.html
@@ -266,10 +266,15 @@
 										<h3>
 											<a name = "naive">Part 1: A Naive Implementation (15 Points)</a>
 										</h3>
-
 										<p>
 											Fill in the method <code>do_risset_slow</code> to implement Risset beats from the definition above.  You should use two nested loops: the outer loop should loop through the notes in a tune, and the inner loop should add an appropriate amount of frequencies spaced evenly around the corresponding note's frequency and at the right phase offset so that they occur at the right time.  
 										</p>
+
+										<p>
+											Below is a video explaining the math below, for those who prefer that modality:
+										</p>
+
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/0hTsop3EM70" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 										<P>
 											To make this concrete, let's recall the example from above
