--- a/index.html
+++ b/index.html
@@ -462,18 +462,18 @@
 </td></tr>
 <tr><td>4</td><td>Wed 1/25/2023</td><td>Octaves, Harmonicity, Circle of Fifths / Pythagorean Tuning</td><td><ul><li><a href = "ClassExercises/Week2/Week2_Harmonicity">Harmonicity Notes</a></li><li><a href = "https://en.wikipedia.org/wiki/Pythagorean_comma">Wikipedia Notes on The Pythagorean Comma</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a> Due Before Class 
 </td></tr>
-<tr><td>5</td><td>Fri 1/27/2023</td><td>Finish Pythagorean Tuning, Chirps, Vibrato, Frequency Sonification</td><td></td><td bgcolor=#f4e6e7>Module 4: Chirps, Instantaneous Frequency due before class 
-</td></tr>
-<tr><td>6</td><td>Mon 1/30/2023</td><td>Zero Crossings, Consonant/Vowel Filtering, Dynamics, Intensity, Loudness</td><td></td><td bgcolor=#f4e6e7>Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics due before class
+<tr><td>5</td><td>Fri 1/27/2023</td><td>Finish Pythagorean Tuning, Chirps, Vibrato, Frequency Sonification</td><td></td><td></td></tr>
+<tr><td>6</td><td>Mon 1/30/2023</td><td>Zero Crossings, Consonant/Vowel Filtering, Dynamics, Intensity, Loudness</td><td></td><td bgcolor=#f4e6e7>Module 4: Chirps, Instantaneous Frequency due before class 
 </td></tr>
 <tr><td>7</td><td>Wed 2/1/2023</td><td>HW1: Risset Beats Q&A, Work Day</td><td><ul><li><a href = "Assignments/HW1_RissetBeats/HappyBirthdaySquareWaves.html">Happy Birthday Square Waves</a></li><li><a href = "Assignments/HW1_RissetBeats/PhaseAggregation.html">Phase Aggregation (Part 2) Notes</a></li> </ul></td><td></td></tr>
-<tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td bgcolor=#f4e6e7>Module 6: Timbre, FM Synthesis, Python Methods As Parameters (Optional, but will help with HW2)
+<tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td bgcolor=#f4e6e7>Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics due before class
 <HR>Assignment 1 Due
+</td></tr>
+<tr><td>9</td><td>Mon 2/6/2023</td><td>Echoes / Impulse Responses / Convolution</td><td><ul><li><a href = "http://www.echothief.com/">Echo Thief</a><li><a href = "https://www.youtube.com/watch?v=aT2YGXxYx-w">Impluse response of a nuclear power plant</a></li></ul></td><td bgcolor=#f4e6e7>Module 6: Timbre, FM Synthesis, Python Methods As Parameters
 <HR>Assignment 2: Digital Instruments Out 
 </td></tr>
-<tr><td>9</td><td>Mon 2/6/2023</td><td>Echoes / Impulse Responses / Convolution</td><td><ul><li><a href = "http://www.echothief.com/">Echo Thief</a><li><a href = "https://www.youtube.com/watch?v=aT2YGXxYx-w">Impluse response of a nuclear power plant</a></li></ul></td><td bgcolor=#f4e6e7>Module 7: Echoes, Impulse Responses, And Convolution due before class 
+<tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td bgcolor=#f4e6e7>Module 7: Echoes, Impulse Responses, And Convolution due before class 
 </td></tr>
-<tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td></td></tr>
 <tr><td colspan = "5"><h2><b><a name = "freqdomain">Unit 2: Frequency Domain Audio Processing</a></b></h2><p></p></td></tr>
 <tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7>Module 8: Discovering The Fourier Transform due before class 
 </td></tr>
