--- a/index.html
+++ b/index.html
@@ -463,36 +463,36 @@
 <tr><td>4</td><td>Wed 1/25/2023</td><td>Octaves, Harmonicity, Circle of Fifths / Pythagorean Tuning</td><td><ul><li><a href = "ClassExercises/Week2/Week2_Harmonicity">Harmonicity Notes</a></li><li><a href = "https://en.wikipedia.org/wiki/Pythagorean_comma">Wikipedia Notes on The Pythagorean Comma</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a> Due Before Class 
 </td></tr>
 <tr><td>5</td><td>Fri 1/27/2023</td><td>Finish Pythagorean Tuning, Chirps, Vibrato, Frequency Sonification</td><td></td><td></td></tr>
-<tr><td>6</td><td>Mon 1/30/2023</td><td>Zero Crossings, Consonant/Vowel Filtering, Dynamics, Intensity, Loudness</td><td></td><td bgcolor=#f4e6e7>Module 4: Chirps, Instantaneous Frequency due before class 
+<tr><td>6</td><td>Mon 1/30/2023</td><td>Zero Crossings, Consonant/Vowel Filtering, Dynamics, Intensity, Loudness</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency</a> Due Before Class 
 </td></tr>
 <tr><td>7</td><td>Wed 2/1/2023</td><td>HW1: Risset Beats Q&A, Work Day</td><td><ul><li><a href = "Assignments/HW1_RissetBeats/HappyBirthdaySquareWaves.html">Happy Birthday Square Waves</a></li><li><a href = "Assignments/HW1_RissetBeats/PhaseAggregation.html">Phase Aggregation (Part 2) Notes</a></li> </ul></td><td></td></tr>
-<tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td bgcolor=#f4e6e7>Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics due before class
+<tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td bgcolor=#f4e6e7>Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics Due Before Class
 <HR>Assignment 1 Due
 </td></tr>
 <tr><td>9</td><td>Mon 2/6/2023</td><td>Echoes / Impulse Responses / Convolution</td><td><ul><li><a href = "http://www.echothief.com/">Echo Thief</a><li><a href = "https://www.youtube.com/watch?v=aT2YGXxYx-w">Impluse response of a nuclear power plant</a></li></ul></td><td bgcolor=#f4e6e7>Module 6: Timbre, FM Synthesis, Python Methods As Parameters
 <HR>Assignment 2: Digital Instruments Out 
 </td></tr>
-<tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td bgcolor=#f4e6e7>Module 7: Echoes, Impulse Responses, And Convolution due before class 
+<tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td bgcolor=#f4e6e7>Module 7: Echoes, Impulse Responses, And Convolution Due Before Class 
 </td></tr>
 <tr><td colspan = "5"><h2><b><a name = "freqdomain">Unit 2: Frequency Domain Audio Processing</a></b></h2><p></p></td></tr>
-<tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7>Module 8: Discovering The Fourier Transform due before class 
+<tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7>Module 8: Discovering The Fourier Transform Due Before Class 
 </td></tr>
-<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td bgcolor=#f4e6e7>Module 8b: Implement The Discrete Fourier Transform due before class 
+<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td bgcolor=#f4e6e7>Module 8b: Implement The Discrete Fourier Transform Due Before Class 
 </td></tr>
-<tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre</td><td></td><td bgcolor=#f4e6e7>Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase due before class 
+<tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre</td><td></td><td bgcolor=#f4e6e7>Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase Due Before Class 
 </td></tr>
-<tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td></td><td bgcolor=#f4e6e7>Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties due before class 
+<tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td></td><td bgcolor=#f4e6e7>Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties Due Before Class 
 </td></tr>
 <tr><td>15</td><td>Mon 2/20/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td></td></tr>
-<tr><td>16</td><td>Wed 2/22/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7>Module 11: STFT, Window Functions, Complex Numbers due before class 
+<tr><td>16</td><td>Wed 2/22/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7>Module 11: STFT, Window Functions, Complex Numbers Due Before Class 
 </td></tr>
 <tr><td></td><td>Thu 2/23/2023</td><td></td><td></td><td bgcolor=#f4e6e7>Assignment 2 Due
 </td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7>Module 12: Complex DFT And Phasors (Optinal, But Will Help with HW3)
 <HR>Assignment 3: Vocoders And Phase Retrieval Out
 </td></tr>
-<tr><td>18</td><td>Mon 2/27/2023</td><td>Convolution/multiplication duality</td><td></td><td bgcolor=#f4e6e7>Module 14: Convolution And Multiplication Duality due before class 
+<tr><td>18</td><td>Mon 2/27/2023</td><td>Convolution/multiplication duality</td><td></td><td bgcolor=#f4e6e7>Module 14: Convolution And Multiplication Duality Due Before Class 
 </td></tr>
-<tr><td>19</td><td>Wed 3/1/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td></td><td bgcolor=#f4e6e7>Module 15: Z Transform due before class 
+<tr><td>19</td><td>Wed 3/1/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td></td><td bgcolor=#f4e6e7>Module 15: Z Transform Due Before Class 
 </td></tr>
 <tr><td colspan = "5"><h2><b><a name = "classical">Unit 3: Classical Machine Learning / AI For Digital Music Processing</a></b></h2><p></p></td></tr>
 <tr><td>20</td><td>Fri 3/3/2023</td><td>Rhythm, Beats, And Audio novelty functions</td><td></td><td></td></tr>
@@ -982,8 +982,8 @@
 											<ul>
 												<li><a href = "ClassExercises/Week1/Week1_AudioReverseGame/">Week 1: Audio Reverse Game</a></li>
 												<li><a href = "ClassExercises/Week2/Week2_BeatPhase/index.html">Week 2: Beat Phase</a></li>
-												<!--
 												<li><a href = "ClassExercises/Week2/Week2_Harmonicity/index.html">Week 2: Harmonicity</a></li>
+												<!--
 												<li><a href = "ClassExercises/Week3/Week3_ZCS_Loudness/index.html">Week 3: Zero Crossings And Loudness Perception</a></li>
 												<li><a href = "ClassExercises/Week3/Week3_Timbre/index.html">Week 3: Harmonics And Timbre</a></li>
 												<li><a href = "ClassExercises/Week4/Week4_Envelopes/index.html">Week 4: Timbral Envelopes</a></li>
@@ -1010,8 +1010,8 @@
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module1/Video0">Module 1: Digital Audio Waveforms, Python Basics</a></a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a></li>
-												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency, Vibrato, Sonification</a></li>
+												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a></li>
