--- a/Assignments/HW2_DigitalInstruments/index.html
+++ b/Assignments/HW2_DigitalInstruments/index.html
@@ -699,6 +699,7 @@
 											</ul> 
 										</li>
 										<li><a href = "../../Software/index.html">Software</a></li>
+										<li><a href = "../../webaudio-pianoroll/index.html">Piano Roll Editor</a></li>
 										<li><a href = "../../index.html#schedule">Schedule</a></li>
                                         <li>
 											<span class="opener">Assignments</span>
