--- a/Assignments/HW1_RissetBeats/index.html
+++ b/Assignments/HW1_RissetBeats/index.html
@@ -262,6 +262,11 @@
 										<p>
 											Thanks to the wonders of python and numpy, you will not have to write much code to accomplish these tasks, but you will have to think carefully about the code that you do write.  A good place to start would be to see if you can replicate the examples of single notes in the background, and then figure out how to extend that in a loop.  Use your ears to help you as you're debugging.  I have tried to provide as many examples as I can so you can check as you're incrementally developing.
 										</p>
+
+										<h4><a name = "rests">Rests</a></h4>
+										<p>
+											If the note number is a <code>nan</code> (not a number), then this means a "rest," or a silence (all 0s) for the requested duration.  The file <code><a href = "HW1_RissetBeats/Tunes/usher.txt">Tunes/usher.txt</a></code> has an example of rests, and the <a href = "../../webaudio-pianoroll/">piano roll editor</a> also supports them.
+										</p>
 										
 										<h3>
 											<a name = "naive">Part 1: A Naive Implementation (15 Points)</a>
