--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 <tr><td>6</td><td>Mon 1/30/2023</td><td>Zero Crossings, Consonant/Vowel Filtering, Dynamics, Intensity, Loudness</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency</a> Due Before Class 
 </td></tr>
 <tr><td>7</td><td>Wed 2/1/2023</td><td>HW1: Risset Beats Q&A, Work Day</td><td><ul><li><a href = "Assignments/HW1_RissetBeats/HappyBirthdaySquareWaves.html">Happy Birthday Square Waves</a></li><li><a href = "Assignments/HW1_RissetBeats/PhaseAggregation.html">Phase Aggregation (Part 2) Notes</a></li> </ul></td><td></td></tr>
-<tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td bgcolor=#f4e6e7>Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics Due Before Class
+<tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a> Due Before Class
 <HR>Assignment 1 Due
 </td></tr>
 <tr><td>9</td><td>Mon 2/6/2023</td><td>Echoes / Impulse Responses / Convolution</td><td><ul><li><a href = "http://www.echothief.com/">Echo Thief</a><li><a href = "https://www.youtube.com/watch?v=aT2YGXxYx-w">Impluse response of a nuclear power plant</a></li></ul></td><td bgcolor=#f4e6e7>Module 6: Timbre, FM Synthesis, Python Methods As Parameters
@@ -984,9 +984,9 @@
 												<li><a href = "ClassExercises/Week1/Week1_AudioReverseGame/">Week 1: Audio Reverse Game</a></li>
 												<li><a href = "ClassExercises/Week2/Week2_BeatPhase/index.html">Week 2: Beat Phase</a></li>
 												<li><a href = "ClassExercises/Week2/Week2_Harmonicity/index.html">Week 2: Harmonicity</a></li>
-												<!--
 												<li><a href = "ClassExercises/Week3/Week3_ZCS_Loudness/index.html">Week 3: Zero Crossings And Loudness Perception</a></li>
 												<li><a href = "ClassExercises/Week3/Week3_Timbre/index.html">Week 3: Harmonics And Timbre</a></li>
+												<!--
 												<li><a href = "ClassExercises/Week4/Week4_Envelopes/index.html">Week 4: Timbral Envelopes</a></li>
 												<li>
 													<a href = "ClassExercises/Week4/Week4_CombFilters/index.html">Week 4: Comb Filters</a>
@@ -1012,8 +1012,8 @@
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency, Vibrato, Sonification</a></li>
-												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a></li>
+												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a></li>
 												<li><a href = "Modules/Module8_DiscoveringFourier">Module 8: Discovering Fourier</a></li>
