--- a/ClassExercises/Week3/Week3_Timbre/index.html
+++ b/ClassExercises/Week3/Week3_Timbre/index.html
@@ -83,14 +83,19 @@
 
 									</p>
 
+									<h3>Exercise 0</h3>
+									<p>
+										Create a pure 440hz tone for reference to compare to what you'll do below.
+									</p>
+
 									<h3>Exercise 1</h3>
 									<p>
-										Create a waveform what is a sum of pure sine waves at a 440h base frequency, where the amplitudes of the harmonics are in a "harmonic sequence" ratio; that is, the base frequency has a ratio of 1, the first harmonic (2x the frequency) has a ratio of 1/2, the second harmonic has a ratio of 1/3, etc.  Plot the first 300 samples of the audio, and also listen to the sound.  
+										Create a waveform what is a sum of pure <b>sine waves</b> at a 440h base frequency, where the amplitudes of the harmonics are in a "harmonic sequence" ratio; that is, the base frequency has a ratio of 1, the first harmonic (2x the frequency) has a ratio of 1/2, the second harmonic has a ratio of 1/3, etc.  Plot the first 300 samples of the audio, and also listen to the sound.  
 									</p>
 
 									<h3>Exercise 2</h3>
 									<p>
-										Write a loop to create a waveform that is similar to the one above, except <b>only the odd harmonics are there</b>.  Furthermore, every other odd harmonic should be negated.  For example, for 440hz base, the amplitudes of sinusoids would be 
+										Write a loop to create a waveform that is similar to the one above, except <b>use cosine instead of sine, only include the odd harmonics</b>.  Furthermore, every other odd harmonic should be negated.  For example, for 440hz base, the amplitudes of sinusoids would be 
 
 										<ul>
 											<li>440hz: 1</li>
@@ -102,7 +107,7 @@
 
 									<h3>Exercise 3</h3>
 									<p>
-										Write a loop to add all odd powers with alternating positive and negative frequencies, just like before, but this time, use cosines, and scale the amplitude down by 1 over the index <i>squared</i> instead of just one over the index.
+										Write a loop to add all odd powers with alternating positive and negative frequencies, just like before, but this time, use <b>sines</b>, and scale the amplitude down by 1 over the index <i>squared</i> instead of just one over the index.
 									</p>
 									
 
