--- a/index.html
+++ b/index.html
@@ -470,9 +470,9 @@
 <HR>Assignment 1 Due
 </td></tr>
 <tr><td>9</td><td>Mon 2/6/2023</td><td>Echoes / Impulse Responses / Convolution</td><td><ul><li><a href = "http://www.echothief.com/">Echo Thief</a><li><a href = "https://www.youtube.com/watch?v=aT2YGXxYx-w">Impluse response of a nuclear power plant</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a> due before class
-<HR>Assignment 2: Digital Instruments Out 
+<HR><a href = "Assignments/HW2_DigitalInstruments">Assignment 2: Digital Instruments</a> Out 
 </td></tr>
-<tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td bgcolor=#f4e6e7>Module 7: Echoes, Impulse Responses, And Convolution Due Before Class 
+<tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a> Due Before Class 
 </td></tr>
 <tr><td colspan = "5"><h2><b><a name = "freqdomain">Unit 2: Frequency Domain Audio Processing</a></b></h2><p></p></td></tr>
 <tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7>Module 8: Discovering The Fourier Transform Due Before Class 
@@ -943,15 +943,9 @@
 												<li>
 													<a href = "Assignments/HW1_RissetBeats">HW1: Risset Beats</a>
 												</li>
-												<!--
 												<li><a href = "Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
-									
-													<ul>
-														<li>
-															<a href = "Assignments/HW2_DigitalInstruments/statements.html">Musical Statements</a>
-														</li>
-													</ul>
 												</li>
+												<!--
 												<li><a href = "Assignments/HW3_Vocoders">HW3: Vocoders And Phase Retrieval</a>
 													<ul>
 														<li>
@@ -1014,8 +1008,8 @@
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency, Vibrato, Sonification</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a></li>
-												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a></li>
+												<!--
 												<li><a href = "Modules/Module8_DiscoveringFourier">Module 8: Discovering Fourier</a></li>
 												<li><a href = "Modules/Module8b_ImplementingDFT">Module 8b: Implementing The Discrete Fourier Transform</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a></li>
