link / due date

--- a/Assignments/HW2_DigitalInstruments/index.html
+++ b/Assignments/HW2_DigitalInstruments/index.html
@@ -43,6 +43,7 @@
 									<header class="main">
                                         <h2>Assignment 2: Digital Instruments (50 Points)</h2>
                                         <h3><a href = "http://www.ctralie.com">Chris Tralie</a>
+										<h3>Due Thursday 2/23 at 11:59PM</h3>
 									</header>
 
 									<div id="page-content">
@@ -416,7 +417,7 @@
 											In this section, you will use the above framework to make a variety of different instrument sounds.  Each instrument requires the creation or utilization of an envelope function and a method to put it all together.
 										</p>
 
-										<h3><a name = "electriguitar">Electric Guitar</a> (2 Points)</h3>
+										<h3><a name = "electricguitar">Electric Guitar</a> (2 Points)</h3>
 										<p>
 											(Shout out to Michael Tecce, spring 2021 for this idea)
 										</p>
