--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 </td></tr>
 <tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre</td><td></td><td bgcolor=#f4e6e7>Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase Due Before Class 
 </td></tr>
-<tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td></td><td bgcolor=#f4e6e7>Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties Due Before Class 
+<tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td bgcolor=#f4e6e7>Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties Due Before Class 
 </td></tr>
 <tr><td>15</td><td>Mon 2/20/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td></td></tr>
 <tr><td>16</td><td>Wed 2/22/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7>Module 11: STFT, Window Functions, Complex Numbers Due Before Class 
