Adding anonymous functions as an exercise

--- a/ClassExercises/Week4/Week4_Envelopes/index.html
+++ b/ClassExercises/Week4/Week4_Envelopes/index.html
@@ -41,11 +41,27 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h2>Week 4: Envelopes</h2>
+										<h1>Week 4: Anonymous Functions And Envelopes</h1>
 										<h3><a href = "http://www.ctralie.com">Chris Tralie</a></h3>
 									</header>
 
 									<div id="page-content">
+
+										<p>
+											In these exercises, we'll be doing various warmup activities to help with <a href = "../../../Assignments/HW2_DigitalInstruments/">Homework 2</a>.
+										</p>
+
+										<HR>
+											<h2>Part 1: Anonymous Functions</h2>
+											<p>
+												Fill in the code below to use anonymous functions to make part of happy birthday with pure tones, then again with square waves
+											</p>
+
+											<iframe src="AnonymousFn.html" width="100%" height="800"></iframe>
+
+										<HR>
+											<h2>Part 2: Envelopes</h2>
+
 									As we saw in <a href = "../../../../Modules/Module6/Video2.html">module 6</a>, the equation for an FM frequency waveform can be written as 
 									
 									<h3>
@@ -83,7 +99,7 @@
 
 
 
-									<h3>Part 1: Wood Drum Envelope</h3>
+									<h3>Part 2a: Wood Drum Envelope</h3>
 
 									<p>
 										The following envelope leads to a wood drum sound when applied both to <b>A(t)</b> and <b>I(t)</b>
@@ -99,7 +115,7 @@
 									<img src = "WoodDrum.svg">
 
 
-									<h3>Part 2: Brass Envelope</h3>
+									<h3>Part 2b: Brass Envelope</h3>
 
 									<p>
 										The following envelope leads to a brass-like sound when applied both to <b>A(t)</b> and <b>I(t)</b>
@@ -114,7 +130,7 @@
 
 									<img src = "Brass.svg">
 
-									<h3>Part 3: Drum-Like Envelope</h3>
+									<h3>Part 2c: Drum-Like Envelope</h3>
 
 									<p>
 										Chowning describes a "drum-like" sound when the following envelope is applied to both <b>A(t)</b> and <b>I(t)</b>
@@ -129,7 +145,7 @@
 
 									<img src = "DrumLike.svg">
 
-									<h3>Part 4: Applying to FM Synthesis</h3>
+									<h3>Part 2d: Applying to FM Synthesis</h3>
 									<p>
 										For those who finish early, try to apply some of these envelopes to the FM synthesis equation to create sounds
 									</p>
