--- a/ClassExercises/Week4/Week4_DFT/index.html
+++ b/ClassExercises/Week4/Week4_DFT/index.html
@@ -143,7 +143,7 @@
 												Part 4: Square Waves
 											</h3>
 											<p>
-												What happens when you apply this to sqare waves that go through 1 period, 2 periods, and 4 periods, as shown below?  Can you characterize what happens as the period increases?  Can you related this to anything we talked about <a href = "../../Week3/Week3_Timbre/">last Friday</a>?
+												What happens when you apply this to square waves that go through 1 period, 2 periods, and 4 periods, as shown below?  Can you characterize what happens as the period increases?  Can you related this to anything we talked about <a href = "../../Week3/Week3_Timbre/">last Friday</a>?
 											</p>
 	
 												<table>
@@ -277,9 +277,8 @@
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a></li>
+												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module8/Video1">Module 8: Discovering The Discrete Fourier Transform</a></li>
 												<!--
-												<li><a href = "../../../Modules/Module8_DiscoveringFourier">Module 8: Discovering Fourier</a></li>
-												<li><a href = "../../../Modules/Module8b_ImplementingDFT">Module 8b: Implementing The Discrete Fourier Transform</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video0">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video0">Module 11: STFT, Window Functions, Complex Numbers</a></li>
