--- a/index.html
+++ b/index.html
@@ -475,10 +475,9 @@
 <tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a> Due Before Class 
 </td></tr>
 <tr><td colspan = "5"><h2><b><a name = "freqdomain">Unit 2: Frequency Domain Audio Processing</a></b></h2><p></p></td></tr>
-<tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7>Module 8: Discovering The Fourier Transform Due Before Class 
+<tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module8/Video1">Module 8: Discovering The Fourier Transform</a> Due Before Class 
 </td></tr>
-<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td bgcolor=#f4e6e7>Module 8b: Implement The Discrete Fourier Transform Due Before Class 
-</td></tr>
+<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td></td></tr>
 <tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre</td><td></td><td bgcolor=#f4e6e7>Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase Due Before Class 
 </td></tr>
 <tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td bgcolor=#f4e6e7>Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties Due Before Class 
@@ -1010,9 +1009,8 @@
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a></li>
+												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module8/Video1">Module 8: Discovering The Discrete Fourier Transform</a></li>
 												<!--
-												<li><a href = "Modules/Module8_DiscoveringFourier">Module 8: Discovering Fourier</a></li>
-												<li><a href = "Modules/Module8b_ImplementingDFT">Module 8b: Implementing The Discrete Fourier Transform</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video0">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video0">Module 11: STFT, Window Functions, Complex Numbers</a></li>
