Hannah found typo

--- a/Assignments/HW2_DigitalInstruments/index.html
+++ b/Assignments/HW2_DigitalInstruments/index.html
@@ -157,7 +157,7 @@
 											But we actually want to know the number of <i>samples</i> per period.  So we need to do a conversation by multiplying by a fancy 1.  If <b>sr</b> is the sample rate in cycles per second, then we can do the following:
 
 											<h4>
-												\[ T = \frac{1 \text{ second}} {f \text{ cycle}}  \frac{sr \text{ samples}}{1 \text{ seconds}}  = \frac{sr \text{ samples}}{ f \text{ second}} \]
+												\[ T = \frac{1 \text{ second}} {f \text{ cycle}}  \frac{sr \text{ samples}}{1 \text{ seconds}}  = \frac{sr \text{ samples}}{ f \text{ cycle}} \]
 											</h4>
 											
 											
