Exercise for today

--- a/ClassExercises/Week4/Week4_DFT/index.html
+++ b/ClassExercises/Week4/Week4_DFT/index.html
@@ -115,7 +115,7 @@
 										<h3>Part 2: Sums of Sinusoids</h3>
 
 										<p>
-											What happens when you apply this to a sum of sinusoids at different frequencie?
+											What happens when you apply this to a sum of sinusoids at different frequencies?
 										</p>
 
 										<h3>
@@ -251,12 +251,8 @@
 												<li>
 													<a href = "../../../ClassExercises/Week4/Week4_CombFilters/index.html">Week 4: Comb Filters</a>
 												</li>
-												<!--
-													<ul>
-														<li><a href = "../../../ClassExercises/Week4/Week4_CombFilters/solutions.html">solutions</a> </li>
-													</ul>
-												</li>
 												<li><a href = "../../../ClassExercises/Week4/Week4_DFT/index.html">Week 4: The Discrete Fourier Transform</a></li>
+												<!--
 												<li><a href = "../../../ClassExercises/Week5/Week5_ApplyingDFT/index.html">Week 5: Applying The DFT</a></li>
 												<li><a href = "../../../ClassExercises/Week6/ComplexDFT/index.html">Week 6: Complex DFT</a></li>
 												<li><a href = "../../../ClassExercises/Week7/Week7_DFTConvolutions">Week 7: DFT And Convolutions</a></li>
