--- a/index.html
+++ b/index.html
@@ -477,10 +477,10 @@
 <tr><td colspan = "5"><h2><b><a name = "freqdomain">Unit 2: Frequency Domain Audio Processing</a></b></h2><p></p></td></tr>
 <tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module8/Video1">Module 8: Discovering The Fourier Transform</a> Due Before Class 
 </td></tr>
-<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td></td></tr>
-<tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre</td><td></td><td bgcolor=#f4e6e7>Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase Due Before Class 
+<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a> Due Before Class 
 </td></tr>
-<tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td bgcolor=#f4e6e7>Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties Due Before Class 
+<tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre, Fast(er) Risset Beats</td><td></td><td></td></tr>
+<tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a> Due Before Class 
 </td></tr>
 <tr><td>15</td><td>Mon 2/20/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td></td></tr>
 <tr><td>16</td><td>Wed 2/22/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7>Module 11: STFT, Window Functions, Complex Numbers Due Before Class 
@@ -620,7 +620,7 @@
 											</p>
 
 											<p>
-												Finally, I am aware that, particularly during the pandemic, there are a variety of factors that may make it difficult to perform at your best level in class.  At Ursinus, we are fortunate to have quite a mix of students from different backgrounds, many of whom need to work part time, and an increasing number of whom are commuters and have family obligations.  If you find yourself having difficulty performing at the level that you want and/or turning assignments in on time because of any of these issues, <b>communicate with me</b>, and we can come up with a solution together (I will gently reach out if I notice any slips even if you don't communicate).  This is an exciting capstone course, and I want to work to keep your excitement alive, regardless of your personal circumstances.  We will get you through the course as long as the lines of communication are open and we work together.  <u><b>You belong in CS!</b></u>
+												Finally, I am aware that, particularly during the pandemic, there are a variety of factors that may make it difficult to perform at your best level in class.  At Ursinus, we are fortunate to have quite a mix of students from different backgrounds, many of whom need to work part time, and an increasing number of whom are commuters and have family obligations.  If you find yourself having difficulty performing at the level that you want and/or turning assignments in on time because of any of these issues, <b>communicate with me</b>, and we can come up with a solution together (I will gently reach out if I notice any slips even if you don't communicate).  This is an exciting elective course, and I want to work to keep your excitement alive, regardless of your personal circumstances.  We will get you through the course as long as the lines of communication are open and we work together.  <u><b>You belong in CS!</b></u>
 											</p>
 
 
@@ -1006,9 +1006,9 @@
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module8/Video1">Module 8: Discovering The Discrete Fourier Transform</a></li>
-												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video0">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties</a></li>
+												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a></li>
+												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video0">Module 11: STFT, Window Functions, Complex Numbers</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module13/Video1.html">Module 13: Aliasing, Inverse DFT</a></li>
