--- a/index.html
+++ b/index.html
@@ -480,47 +480,51 @@
 <tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a> Due Before Class 
 </td></tr>
 <tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre, Fast(er) Risset Beats</td><td></td><td></td></tr>
-<tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a> Due Before Class 
+<tr><td>14</td><td>Fri 2/17/2023</td><td>Converting Frequency Units on Real Audio, Begin The Short-Time Fourier Transform (STFT)</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a> Due Before Class 
 </td></tr>
-<tr><td>15</td><td>Mon 2/20/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td></td></tr>
-<tr><td>16</td><td>Wed 2/22/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7>Module 11: STFT, Window Functions, Complex Numbers Due Before Class 
+<tr><td>15</td><td>Mon 2/20/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td></td></tr>
+<tr><td>16</td><td>Wed 2/22/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td bgcolor=#f4e6e7>Module 11: STFT, Window Functions Due Before Class 
 </td></tr>
 <tr><td></td><td>Thu 2/23/2023</td><td></td><td></td><td bgcolor=#f4e6e7>Assignment 2 Due
-</td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7>Module 12: Complex DFT And Phasors (Optinal, But Will Help with HW3)
+</td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7>Module 12: Complex DFT And Phasors Due Before Class
 <HR>Assignment 3: Vocoders And Phase Retrieval Out
 </td></tr>
-<tr><td>18</td><td>Mon 2/27/2023</td><td>Convolution/multiplication duality</td><td></td><td bgcolor=#f4e6e7>Module 14: Convolution And Multiplication Duality Due Before Class 
+<tr><td>18</td><td>Mon 2/27/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7>Module 13: Aliasing Due Before Class
 </td></tr>
-<tr><td>19</td><td>Wed 3/1/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td></td><td bgcolor=#f4e6e7>Module 15: Z Transform Due Before Class 
+<tr><td>19</td><td>Wed 3/1/2023</td><td>Convolution/multiplication duality</td><td></td><td bgcolor=#f4e6e7>Module 14: Convolution And Multiplication Duality Due Before Class 
+</td></tr>
+<tr><td>20</td><td>Fri 3/3/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td></td><td bgcolor=#f4e6e7>Module 15: Z Transform Due Before Class 
 </td></tr>
 <tr><td colspan = "5"><h2><b><a name = "classical">Unit 3: Classical Machine Learning / AI For Digital Music Processing</a></b></h2><p></p></td></tr>
-<tr><td>20</td><td>Fri 3/3/2023</td><td>Rhythm, Beats, And Audio novelty functions</td><td></td><td></td></tr>
 <tr><td>--</td><td>Mon 3/6/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>--</td><td>Wed 3/8/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>--</td><td>Fri 3/10/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
-<tr><td>21</td><td>Mon 3/13/2023</td><td>Audio novelty functions And Autocorrelation</td><td></td><td></td></tr>
-<tr><td>22</td><td>Wed 3/15/2023</td><td>Matrix Multiplication, Mel Spacing</td><td></td><td></td></tr>
-<tr><td>23</td><td>Fri 3/17/2023</td><td>Autotuners</td><td></td><td></td></tr>
-<tr><td>24</td><td>Mon 3/20/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td></td></tr>
-<tr><td>25</td><td>Wed 3/22/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
-<tr><td>26</td><td>Fri 3/24/2023</td><td>Dynamic Time Warping Continued</td><td></td><td></td></tr>
-<tr><td>27</td><td>Mon 3/27/2023</td><td>Chroma Features, Shepard Tones</td><td></td><td></td></tr>
-<tr><td>28</td><td>Wed 3/29/2023</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td></td></tr>
-<tr><td>29</td><td>Fri 3/31/2023</td><td>Harmonic-Percussive Source Separation</td><td></td><td></td></tr>
-<tr><td>30</td><td>Mon 4/3/2023</td><td>Matrix Multiplication for Audio Activations</td><td></td><td></td></tr>
-<tr><td>31</td><td>Wed 4/5/2023</td><td>Source Separation via Nonnegative matrix factorization</td><td><ul><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
-<tr><td>32</td><td>Fri 4/7/2023</td><td>Self-Similarity in Audio</td><td></td><td></td></tr>
+<tr><td>21</td><td>Mon 3/13/2023</td><td>Rhythm, Beats, And Audio novelty functions</td><td></td><td></td></tr>
+<tr><td>22</td><td>Wed 3/15/2023</td><td>Audio novelty functions And Autocorrelation</td><td></td><td bgcolor=#f4e6e7>HW4: Tempo Estimation And Beat Tracking Out
+</td></tr>
+<tr><td></td><td>Thu 3/16/2023</td><td></td><td></td><td bgcolor=#f4e6e7>HW3 Due
+</td></tr><tr><td>23</td><td>Fri 3/17/2023</td><td>Matrix Multiplication, Mel Spacing</td><td></td><td></td></tr>
+<tr><td>24</td><td>Mon 3/20/2023</td><td>Autotuners</td><td></td><td></td></tr>
+<tr><td>25</td><td>Wed 3/22/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td></td></tr>
+<tr><td>26</td><td>Fri 3/24/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
+<tr><td>27</td><td>Mon 3/27/2023</td><td>Dynamic Time Warping Continued</td><td></td><td></td></tr>
+<tr><td>28</td><td>Wed 3/29/2023</td><td>Chroma Features, Shepard Tones</td><td></td><td></td></tr>
+<tr><td>29</td><td>Fri 3/31/2023</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td></td></tr>
+<tr><td>30</td><td>Mon 4/3/2023</td><td>Harmonic-Percussive Source Separation</td><td></td><td></td></tr>
+<tr><td>31</td><td>Wed 4/5/2023</td><td>Matrix Multiplication for Audio Activations</td><td></td><td></td></tr>
+<tr><td>32</td><td>Fri 4/7/2023</td><td>Source Separation via Nonnegative matrix factorization</td><td><ul><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
+<tr><td>33</td><td>Mon 4/10/2023</td><td>Self-Similarity in Audio</td><td></td><td></td></tr>
 <tr><td colspan = "5"><h2><b><a name = "neuralnets">Unit 4: Neural Networks for Digital Music Processing</a></b></h2><p></p></td></tr>
-<tr><td>33</td><td>Mon 4/10/2023</td><td>Introduction To Neural Networks</td><td></td><td></td></tr>
-<tr><td>34</td><td>Wed 4/12/2023</td><td>Deep Learning</td><td></td><td></td></tr>
-<tr><td>35</td><td>Fri 4/14/2023</td><td>Convolutional Neural Networks</td><td></td><td></td></tr>
-<tr><td>36</td><td>Mon 4/17/2023</td><td>Deep beat tracking</td><td><ul><li><a href = "https://ofai.at/~jan.schlueter/pubs/2014_icassp.pdf">Schlüter/Böck 2014: "Improved Musical Onset Detection with Convolutional Neural Networks</a></li><li><a href = "https://www.eurasip.org/Proceedings/Eusipco/eusipco2019/Proceedings/papers/1570533824.pdf">Davies/Böck 2019: Temporal Convolutional Neural Networks for Musical Audio Beat Tracking</a></li></ul></td><td></td></tr>
+<tr><td>34</td><td>Wed 4/12/2023</td><td>Introduction To Neural Networks</td><td></td><td></td></tr>
+<tr><td>35</td><td>Fri 4/14/2023</td><td>Deep Learning</td><td></td><td></td></tr>
+<tr><td>36</td><td>Mon 4/17/2023</td><td>Convolutional Neural Networks</td><td></td><td></td></tr>
 <tr><td>--</td><td>Wed 4/19/2023</td><td>COSA Day</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
-<tr><td>37</td><td>Fri 4/21/2023</td><td>Deep beat tracking continued</td><td></td><td></td></tr>
-<tr><td>38</td><td>Mon 4/24/2023</td><td>Wavenet</td><td></td><td></td></tr>
-<tr><td>39</td><td>Wed 4/26/2023</td><td>Wave-U-Net for Source Separation</td><td><ul><li><a href = "https://arxiv.org/pdf/1806.03185.pdf">Wave-U-Net Paper</a></li></ul></td><td></td></tr>
-<tr><td>40</td><td>Fri 4/28/2023</td><td>Machine Learning Meets FM Synthesis</td><td></td><td></td></tr>
+<tr><td>37</td><td>Fri 4/21/2023</td><td>Deep beat tracking</td><td><ul><li><a href = "https://ofai.at/~jan.schlueter/pubs/2014_icassp.pdf">Schlüter/Böck 2014: "Improved Musical Onset Detection with Convolutional Neural Networks</a></li><li><a href = "https://www.eurasip.org/Proceedings/Eusipco/eusipco2019/Proceedings/papers/1570533824.pdf">Davies/Böck 2019: Temporal Convolutional Neural Networks for Musical Audio Beat Tracking</a></li></ul></td><td></td></tr>
+<tr><td>38</td><td>Mon 4/24/2023</td><td>Deep beat tracking continued</td><td></td><td></td></tr>
+<tr><td>39</td><td>Wed 4/26/2023</td><td>Wavenet</td><td></td><td></td></tr>
+<tr><td>40</td><td>Fri 4/28/2023</td><td>Wave-U-Net for Source Separation</td><td><ul><li><a href = "https://arxiv.org/pdf/1806.03185.pdf">Wave-U-Net Paper</a></li></ul></td><td></td></tr>
 <tr><td>41</td><td>Mon 5/1/2023</td><td>Machine Learning Meets FM Synthesis</td><td></td><td></td></tr>
+<tr><td>42</td><td>Wed 5/3/2023</td><td>Machine Learning Meets FM Synthesis</td><td></td><td></td></tr>
 </td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr><!-- End Schedule -->
 
 
